Bug 357799 - [Internet Search] Result list is not cleared on new search
Summary: [Internet Search] Result list is not cleared on new search
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: HEAD
Platform: openSUSE Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-01-10 16:55 UTC by Sven Werlen
Modified: 2017-12-16 02:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sven Werlen 2016-01-10 16:55:00 UTC
Everytime an internet search is executed, results are appended to the existing list.
It's not very intuitive for the end-user. Result list should be first cleared before presenting the new results.

Reproducible: Always

Steps to Reproduce:
1. Edit | Internet Search
2. Type any search criteria and click "Search" button
3. Type other search criteria and click "Search" button again


Actual Results:  
Results are appended to existing ones (results from 1st search)

Expected Results:  
New results should replace the existing ones
Comment 1 Robby Stephenson 2016-01-10 17:08:22 UTC
It's been that way intentionally since early releases of Tellico. My thought has been that the user would be looking for results from different sources and would want to compare them to see which to import. Maybe that's not intuitive as it should be - perhaps one approach would be to clear the results list if the data source was not changed in between searches?

When I use Tellico myself, I tend to do multiple searches for ISBN, for example, to see which data source has the best result. Maybe I'm the outlier. :)
Comment 2 Sven Werlen 2016-01-10 18:00:54 UTC
Oh, I understand. In my case, it's disturbing because I tend to add several games, one after the other and when I do the second search, the results appear after the first and I have to scroll down to see them.

I think it's a good candidate for a configuration setting. I'll prepare it and update the attached review request.
Comment 3 Sven Werlen 2016-01-10 19:21:58 UTC
Review request as been updated.
The "clear results on new search" is now part of the configuration.
https://git.reviewboard.kde.org/r/126705/
Comment 4 Robby Stephenson 2016-01-22 20:36:07 UTC
Git commit 2eb8dfb28474bd556f89ec5be87ba0d5ea6bd527 by Robby Stephenson.
Committed on 22/01/2016 at 20:35.
Pushed by rstephenson into branch 'master'.

Clear search results for each new search
REVIEW: 126705

M  +1    -0    src/fetchdialog.cpp

http://commits.kde.org/tellico/2eb8dfb28474bd556f89ec5be87ba0d5ea6bd527
Comment 5 Robby Stephenson 2017-12-16 02:12:59 UTC
Git commit dbf091714d4d8c4e61428a33a75e9efd2a4cd807 by Robby Stephenson.
Committed on 16/12/2017 at 02:10.
Pushed by rstephenson into branch 'master'.

Do not clear Fetch Dialog when Search is clicked

Reverting fix for bug 357799. The dialog has a Clear button for a reason
and the workflow in the bug discussion still holds (personally) where I
expect the user to want to perhaps do a single search from mutiple data
sources for the same item and choose the one with the most appropriate
data.
Related: bug 386036
FIXED-IN: 3.2

M  +4    -0    ChangeLog
M  +0    -1    src/fetchdialog.cpp

https://commits.kde.org/tellico/dbf091714d4d8c4e61428a33a75e9efd2a4cd807