Clear search results for each new search

BUG: 357799
REVIEW: 126705